# uncode

./: README.md
.github/workflows/: price-monitor.yml  sqlalchemy-daily-tip.yml
price-monitor/: AGENT.md  README.md  pyproject.toml
price-monitor/data/: prices.json
price-monitor/src/price_monitor/: __init__.py  models.py  notifier.py  store.py
price-monitor/src/price_monitor/scrapers/: oberpfalz_beef.py
price-monitor/tests/: test_oberpfalz_beef.py  test_store.py
sqlalchemy-daily-tips/: README.md  progress.json  send_tip.py  tips.json
