[project]
name = "price-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Paling", email = "christian.paling@googlemail.com" }
]
requires-python = ">=3.14.2"
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "pydantic>=2.12.5",
]

[project.scripts]
price-monitor = "price_monitor:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
